# hockey-card-analyst

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  hockey-card-analyst-PLAN.md  pyproject.toml
config/: glossary.yaml  interpretation.yaml
docs/: hockey-card-analyst-PLAN.md
examples/: .gitignore  demo_adjudicate.py  demo_assess.py  demo_compare.py  demo_edge.py  demo_goalie.py  demo_micro.py  demo_reports.py
src/: config.py  schemas.py  server.py
src/engine/: __init__.py  adjudicate.py  assess.py  caveats.py  common.py  compare.py  edge.py  glossary.py  tiers.py
src/reports/: __init__.py  pdf.py  render.py  save.py
tests/: test_adjudicate.py  test_assess.py  test_common.py  test_compare.py  test_edge_assess.py  test_edge_config.py  test_edge_reports.py  test_edge_schemas.py  test_edge_server.py  test_fixtures.py  test_glossary.py  test_goalies.py  test_micro_adjudicate.py  test_micro_assess.py  test_micro_compare.py  test_micro_config.py  test_micro_reports.py  test_micro_schemas.py  test_micro_server.py  test_no_em_dashes.py  test_rapm_context.py  test_reports.py  test_reports_tool.py  test_scouting_calibration.py  test_server.py  test_tiers.py  test_trajectory_bounce.py  test_war_reading.py  test_xg_substrate.py
tests/fixtures/: .gitkeep  celebrini.json  celebrini_micro.json  compare_clear_leader.json  compare_clear_trailer.json  compare_goalie_floor.json  compare_goalie_peak.json  compare_split_shutdown.json  compare_split_sniper.json  cotter_edge.json  cuylle_micro.json  dorofeyev.json  gritsyuk.json  hughes.json  hughes_edge.json  makar_edge.json  (+9 more)
(+8 files in other folders)
